[metadata]
name = antilles-core
version = 1.0.1
description = antilles core
license = BSD-3 and EPL-1.0
keywords = hpc, antilles
url = https://github.com/lenovo/Antilles
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[bdist]
formats = rpm
