[metadata]
name = antilles-mail-agent
version = 1.0.0
description = Restful server to send mail message
license = BSD-3 and EPL-1.0
keywords = hpc, antilles, mail
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[aliases]
test = pytest

[tool:pytest]
addopts = --cov
norecursedirs = dist build .tox
testpaths = tests/

[flake8]
show-source = true

[isort]
line-width = 78
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = antilles
multi_line_output = 5
not_skip = __init__.py
