[metadata]
name = antilles-ganglia-mond
version = 1.0.0
description = Ganglia Meta daemon in Python
license = BSD-3 and EPL-1.0
keywords = hpc, antilles, ganglia
url = https://github.com/lenovo/Antilles
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[isort]
line-width = 78
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = antilles
multi_line_output = 5
not_skip = __init__.py
