[metadata]
name = antilles-icinga-mond
version = 1.0.0
description = Icinga2 monitor daemon process
license = BSD-3 and EPL-1.0
keywords = hpc, antilles, icinga2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[tool:pytest]
addopts = --cov --cov-report term-missing --no-cov-on-fail
norecursedirs = dist build .tox
testpaths = tests/

[isort]
line-width = 78
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = antilles
multi_line_output = 5
not_skip = __init__.py
